--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav {
   background-color: beige;
   justify-content: space-between;
   height: 100px;
-  width: 100vw;
+  width: 100%;
 }
 
 .menu-navbar {
@@ -83,11 +83,15 @@ a:hover {
   font-size: 25px;
 }
 
+.hamburger {
+  display: none;
+}
+
 /* ---------------------change background color------------------------ */
 
 .bg-options {
   width: 100%;
-  height: 50px;
+  height: 50%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -125,8 +129,8 @@ button:hover {
 /* ----------------banner----------------- */
 
 .banner {
-  width: 100vw;
-  height: 70vh;
+  min-width: 100vw;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
 }
@@ -202,10 +206,10 @@ h1 {
 
 /* ---------------------Projects Section------------------------ */
 .project {
-  width: 100vw;
-  height: 95vh;
+  min-width: 100vw;
+  min-height: 95vh;
   margin: auto;
-  padding: 50px 0;
+  padding: 20px 0 50px 0;
   margin-bottom: 50px;
   background-image: linear-gradient(
     to bottom right,
@@ -311,14 +315,14 @@ h1 {
 /* ----------------------About---------------------- */
 
 #about {
-  height: 85vh;
-  width: 100vw;
+  min-height: 85vh;
+  min-width: 100vw;
 }
 
 .description {
   border: 1px solid #ccc;
-  max-width: 50%;
-  max-height: 80%;
+  min-width: 50%;
+  min-height: 80%;
   margin: 0 auto;
   background-color: antiquewhite;
   border-radius: 16px;
@@ -367,8 +371,8 @@ h1 {
 /* ----------------Documents/Download------------ */
 
 .documents {
-  width: 100vw;
-  height: 60vh;
+  min-width: 100vw;
+  min-height: 60vh;
   margin: auto;
   padding: 50px 0;
   background-image: linear-gradient(
@@ -443,4 +447,98 @@ hr {
   max-width: 95%;
   display: flex;
   justify-content: flex-end;
+}
+
+@media only screen and (max-width: 415px) {
+  nav {
+    padding: 0 20px;
+  }
+
+  .logo {
+    margin-left: 2px;
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    padding: 35px 0;
+  }
+
+  .hamburger .line {
+    width: 30px;
+    height: 3px;
+    background: #ae2121;
+    margin: 6px 0;
+  }
+
+  .menu-navbar {
+    height: 0; /* to hide the height of the navbar */
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    background: beige;
+    transition: 0.2s;
+    overflow: hidden;
+    opacity: 0.9;
+  }
+
+  .menu-navbar.active {
+    height: 200px;
+  }
+
+  .menu-navbar ul {
+    display: block;
+    width: fit-content;
+    margin: 35px auto 0 auto;
+    text-align: center;
+    transition: 0.5s;
+    opacity: 0;
+  }
+
+  .menu-navbar.active ul {
+    opacity: 1;
+  }
+
+  .link a {
+    margin-bottom: 12px;
+  }
+
+  button {
+    width: 15px;
+    height: 15px;
+  }
+
+  .intro {
+    font-size: 13px;
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card {
+    margin-bottom: 15px;
+  }
+
+  .card img {
+    width: 100%;
+    height: 200px;
+  }
+
+  .card h2 {
+    font-size: 16px;
+  }
+
+  .card p {
+    font-size: 12px;
+  }
+
+  /* ---------description------- */
+
+  .description {
+    width: 80vw;
+    margin-bottom: 35px;
+  }
 }
