--- a/style.css
+++ b/style.css
@@ -227,27 +227,35 @@ h1 {
   align-items: center;
 }
 
-.card h2 {
-  margin-top: 16px;
-  margin-bottom: 15px;
-  text-align: center;
+.projects .card h2 {
+  font-size: 18px;
+  margin: 15px 0;
 }
 
-.card p {
+.projects .card p {
   padding: 0;
   text-align: justify;
+  font-size: 14px;
 }
 
 .card {
+  flex-grow: 1;
+  min-height: 70vh;
   position: relative;
   border: 1px solid #ccc;
-  border-radius: 16px;
+  border-radius: 20px;
   box-shadow: 8px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   max-width: 320px;
   margin: 0 auto;
   background-color: #f9e4e7;
+  transition: transform 0.2s;
 }
+
+.card:hover {
+  transform: scale(1.1);
+}
+
 .card img {
   width: 100%;
   height: 260px;
@@ -282,12 +290,13 @@ h1 {
 }
 
 .tag {
+  max-width: 100vw;
   font-size: 10px;
   font-weight: 500;
-  background-color: yellow;
+  background-color: beige;
   padding: 0 4px;
-  border-radius: 2px;
-  box-shadow: 2px 2px grey;
+  border-radius: 8px;
+  box-shadow: 2px 2px rgb(159, 159, 148);
   transform: translateX(-100%);
   animation: slideIn 0.5s ease-in-out forwards;
   animation-delay: 0.1s;
@@ -321,7 +330,7 @@ h1 {
 
 .description {
   border: 1px solid #ccc;
-  min-width: 50%;
+  max-width: 50%;
   min-height: 80%;
   margin: 0 auto;
   background-color: antiquewhite;
